--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/console": "^5.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "spatie/phpunit-snapshot-assertions": "^4.2"
     },
     "autoload": {
         "psr-4": {
