add php 7.3/7.4/8.0 support

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "bin": "bin/ray-scan",
     "require": {
+        "php": "^7.3|^8.0",
         "nikic/php-parser": "^4.10",
         "symfony/console": "^5.3"
     },
