--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path__1.yml
@@ -22,3 +22,9 @@
      [<line-num>   6</line-num>]            <keyword>echo</keyword> strtoupper(<str>'test'</str>) . <keyword>PHP_EOL</keyword>;                                          
 - |4
      [<line-num>   7</line-num>]                                                                                        
+- |
+
+- |
+    ---
+- |
+    Found 1 function calls in 1 files.
