--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "nikic/php-parser": "^4.10",
+        "permafrost-dev/php-code-search": "^1.0",
         "symfony/console": "^5.3"
     },
     "require-dev": {
