--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename_and_displays_progress__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename_and_displays_progress__1.yml
@@ -12,7 +12,7 @@
 - |4
      Line Num: 2
 - |4
-     Found   : <ray-call>ray</ray-call>
+     Found   : <target-call>ray</target-call>
 - |4
      ------
 - |
