remove file:// link in header output, update test snapshots

--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename__1.yml
@@ -1,7 +1,7 @@
 - |
 
 - |4
-     Filename: <href=file:///tests/fixtures/fixture1.php>/tests/fixtures/fixture1.php</>
+     Filename: ./tests/fixtures/fixture1.php
 - |4
      Line Num: 2
 - |4
