--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": "^7.3|^8.0",
         "permafrost-dev/php-code-search": "^1.0",
-        "symfony/console": "^5.3"
+        "symfony/console": "^5.3",
+        "symfony/finder": "^5.3"
     },
     "require-dev": {
         "permafrost-dev/coverage-check": "^1.0",
