--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename_and_displays_progress__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename_and_displays_progress__1.yml
@@ -20,4 +20,14 @@
 - |
     ---
 - |
+    +--+--+
+- |
+    |<info> Filename </info>|<info> Call Count </info>|
+- |
+    +--+--+
+- |
+    | ./tests/fixtures/fixture1.php | 1 |
+- |
+    +--+--+
+- |
     Found 1 function calls in 1 files.
