--- a/tests/Printers/__snapshots__/ConsoleResultPrinterTest__it_prints_results__1.yml
+++ b/tests/Printers/__snapshots__/ConsoleResultPrinterTest__it_prints_results__1.yml
@@ -8,9 +8,6 @@
      Found   : <target-call>test</target-call>
 - |4
      ------
-- |
-    <target-line> [<line-num-target>   3</line-num-target>] <pointer-target>══════❱</pointer-target>                                                                                </target-line>
-- |4
-     [<line-num>   4</line-num>]            <keyword>echo</keyword> strtolower(<str>'TEST'</str>) . <keyword>PHP_EOL</keyword>;                                          
-- |4
-     [<line-num>   5</line-num>]                                                                                        
+- |4+
+          3▕  echo strtolower('TEST') . PHP_EOL;
+
