--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path__1.yml
@@ -9,11 +9,11 @@
 - |4
      ------
 - |4+
-        [90m   1[0m[90m▕  [0m[39mray[0m[38;5;208m([0m[38;5;70m'12345'[0m[38;5;208m);                                                               [0m
-    [31;1m ❱❱ [0m[3;1m   2[0m[90m▕  [0m[38;5;208;1;3m                                                                                [0m
-        [90m   3[0m[90m▕  [0m[38;5;208m    echo [0m[39mstrtolower[0m[38;5;208m([0m[38;5;70m'TEST'[0m[38;5;208m) . [0m[39mPHP_EOL[0m[38;5;208m;                                          [0m
-        [90m   4[0m[90m▕  [0m[38;5;208m                                                                                [0m
-        [90m   5[0m[90m▕  [0m[38;5;208m    echo [0m[39mstrtoupper[0m[38;5;208m([0m[38;5;70m'test'[0m[38;5;208m) . [0m[39mPHP_EOL[0m[38;5;208m;[0m
+           1▕  ray('12345');                                                               
+     ❱❱    2▕                                                                                  
+           3▕      echo strtolower('TEST') . PHP_EOL;                                          
+           4▕                                                                                  
+           5▕      echo strtoupper('test') . PHP_EOL;
 
 - |
 
