--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename_and_displays_progress__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename_and_displays_progress__1.yml
@@ -1,17 +1,9 @@
-- ' 0/1 [░░░░░░░░░░░░░░░░░░░░░░░░░░░░]   0%'
-- |-
-
+- |4+
+     0/1 [░░░░░░░░░░░░░░░░░░░░░░░░░░░░]   0%
      1/1 [▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓] 100%
-- |+
 
-
-- |4
-     Filename: ./tests/fixtures/fixture1.php
-- |4
-     Line Num: 2
-- |4
-     Found   : <target-call>ray</target-call>
-- |4
-     ------
-- |4
-     Found 1 function calls in 1 files.
+- ' Filename: ./tests/fixtures/fixture1.php'
+- ' Line Num: 2'
+- ' Found   : <target-call>ray</target-call>'
+- ' ------'
+- ' Found 1 function calls in 1 files.'
