--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path__1.yml
@@ -1,23 +1,14 @@
-- |
-
+- ''
+- ' Filename: ./tests/fixtures/fixture1.php'
+- ' Line Num: 2'
+- ' Found   : <target-call>ray</target-call>'
+- ' ------'
 - |4
-     Filename: ./tests/fixtures/fixture1.php
-- |4
-     Line Num: 2
-- |4
-     Found   : <target-call>ray</target-call>
-- |4
-     ------
-- |4+
-           1▕  ray('12345');
-     ❱❱    2▕  
+     ❱❱    1▕  ray('12345');
+           2▕  
            3▕      echo strtolower('TEST') . PHP_EOL;
            4▕  
            5▕      echo strtoupper('test') . PHP_EOL;
-
-- |
-
-- |4
-     ---
-- |4
-     Found 1 function calls in 1 files.
+- ''
+- ' ---'
+- ' Found 1 function calls in 1 files.'
