--- a/tests/Printers/__snapshots__/ConsoleResultPrinterTest__it_prints_results__1.yml
+++ b/tests/Printers/__snapshots__/ConsoleResultPrinterTest__it_prints_results__1.yml
@@ -1,13 +1,7 @@
-- |
-
+- ''
+- ' Filename: fixture1.php'
+- ' Line Num: 3'
+- ' Found   : <target-call>test</target-call>'
+- ' ------'
 - |4
-     Filename: fixture1.php
-- |4
-     Line Num: 3
-- |4
-     Found   : <target-call>test</target-call>
-- |4
-     ------
-- |4+
-     ❱❱    3▕  echo strtolower('TEST') . PHP_EOL;
-
+           3▕  echo strtolower('TEST') . PHP_EOL;
