--- a/tests/Printers/__snapshots__/ConsoleResultsPrinterTest__it_prints_a_summary_with_a_table__1.yml
+++ b/tests/Printers/__snapshots__/ConsoleResultsPrinterTest__it_prints_a_summary_with_a_table__1.yml
@@ -1,12 +1,6 @@
-- |
-    +--+--+
-- |
-    |<info> Filename </info>|<info> Call Count </info>|
-- |
-    +--+--+
-- |
-    | ./tests/fixtures/fixture1.php | 1 |
-- |
-    +--+--+
-- |4
-     Found 1 function calls in 1 files.
+- +--+--+
+- '|<info> Filename </info>|<info> Call Count </info>|'
+- +--+--+
+- '| ./tests/fixtures/fixture1.php | 1 |'
+- +--+--+
+- ' Found 1 function calls in 1 files.'
