--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename_and_displays_progress__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename_and_displays_progress__1.yml
@@ -3,7 +3,7 @@
      1/1 [▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓] 100%
 
 - ' Filename: ./tests/fixtures/fixture1.php'
-- ' Line Num: 2'
-- ' Found   : <target-call>ray</target-call>'
+- ' Line Num: <options=bold>2</>'
+- ' Found   : <fg=#e53e3e>ray</>'
 - ' ------'
 - ' Found 1 function calls in 1 files.'
