--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path__1.yml
@@ -1,7 +1,7 @@
 - ''
 - ' Filename: ./tests/fixtures/fixture1.php'
-- ' Line Num: 2'
-- ' Found   : <target-call>ray</target-call>'
+- ' Line Num: <options=bold>2</>'
+- ' Found   : <fg=#e53e3e>ray</>'
 - ' ------'
 - |4
            1▕  <?php
