update test snapshots

--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename_and_displays_progress__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename_and_displays_progress__1.yml
@@ -1,5 +1,5 @@
-- |4+
-     0/1 [░░░░░░░░░░░░░░░░░░░░░░░░░░░░]   0%
+- |+
+    Scanning for ray calls... 0/1 [░░░░░░░░░░░░░░░░░░░░░░░░░░░░]   0%
      1/1 [▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓] 100%
 
 - ' Filename: ./tests/fixtures/fixture1.php'
