--- a/tests/Printers/__snapshots__/ConsoleResultPrinterTest__it_prints_results__1.yml
+++ b/tests/Printers/__snapshots__/ConsoleResultPrinterTest__it_prints_results__1.yml
@@ -1,6 +1,5 @@
-- ' Filename: fixture1.php'
-- ' Line Num: <options=bold>3</>'
-- ' Found   : <fg=#e53e3e>test</>'
+- ' File:  fixture1.php:<options=bold>3</>'
+- ' Call:  <fg=#e53e3e>test</>'
 - ' ------'
 - |4
      ❱❱    3▕  
