--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename__1.yml
@@ -1,9 +1,9 @@
-- ' <fg=#169b3c>❱</> scanning for ray calls...'
-- ' <fg=#169b3c>❱</> scan complete.'
+- ' <fg=#3B82F6>❱</> scanning for ray calls...'
+- ' <fg=#3B82F6>❱</> scan complete.'
 - ''
-- ' File:  ./tests/fixtures/fixture1.php:<options=bold>2</>'
-- ' Call:  <fg=#e53e3e>ray</>'
-- ' ------'
+- ' <fg=#78716C;options=bold>❱</> <fg=#e53e3e>ray</>'
+- ' <fg=#78716C;options=bold>❱</> ./tests/fixtures/fixture1.php:<options=bold>2</>'
+- ''
 - |4
            1▕  <?php
      ❱❱    2▕      ray('12345');
@@ -11,4 +11,4 @@
            4▕      echo strtolower('TEST') . PHP_EOL;
            5▕  
            6▕      echo strtoupper('test') . PHP_EOL;
-- ' <fg=#ef4444>❗</>Found 1 references in 1 files.'
+- ' <fg=#ef4444>❗</>Found 1 call in 1 file.'
