--- a/tests/Printers/__snapshots__/ConsoleResultsPrinterTest__it_prints_a_summary_with_a_table__1.yml
+++ b/tests/Printers/__snapshots__/ConsoleResultsPrinterTest__it_prints_a_summary_with_a_table__1.yml
@@ -1,7 +1,7 @@
 - +--+--+
-- '|<info> Filename </info>|<info> Call Count </info>|'
+- '|<info> Filename  </info>|<info> Call Count  </info>|'
 - +--+--+
 - '| ./tests/fixtures/fixture1.php | 1 |'
 - +--+--+
 - ''
-- ' <fg=#ef4444>❗</>Found 1 references in 1 files.'
+- ' <fg=#ef4444>❗</>Found 1 call in 1 file.'
