--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,6 @@
 name: run-tests
 
-on: 
+on:
   push:
     branches:
       - main
@@ -33,18 +33,28 @@ jobs:
         run: |
           echo "::add-matcher::${{ runner.tool_cache }}/php.json"
           echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
+          
+      - name: Get composer cache directory path
+        id: composer-cache-dir-path
+        run: echo "::set-output name=dir::$(composer config cache-files-dir --global)"
+          
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.composer-cache-dir-path.outputs.dir }}
+          key: dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
 
       - name: Install dependencies
         run: composer update --${{ matrix.stability }} --prefer-dist --no-interaction
 
       - name: Execute tests
         run: ./vendor/bin/phpunit --coverage-clover clover.xml -d --without-creating-snapshots
-        
+
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: clover.xml
-          
+
       - name: Enforce minimum code coverage
         run: ./vendor/bin/coverage-check clover.xml -r 75
