--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path_and_displays_verbose_output__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path_and_displays_verbose_output__1.yml
@@ -1,8 +1,8 @@
 - ' <fg=#3B82F6>❱</> scanning for ray calls...'
 - '   <fg=red;options=bold>✗</> tests/fixtures/fixture1.php'
-- '   <fg=green>✔</> tests/fixtures/fixture2.php'
-- '   <fg=green>✔</> tests/fixtures/fixture3.php'
-- '   <fg=green>✔</> tests/fixtures/sub1/empty1.php'
+- '   <fg=#169b3c>✔</> tests/fixtures/fixture2.php'
+- '   <fg=#169b3c>✔</> tests/fixtures/fixture3.php'
+- '   <fg=#169b3c>✔</> tests/fixtures/sub1/empty1.php'
 - ' <fg=#3B82F6>❱</> scan complete.'
 - ''
 - ' <fg=#78716C;options=bold>❱</> <fg=#e53e3e>ray</>'
