--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path_and_displays_verbose_output__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_path_and_displays_verbose_output__1.yml
@@ -5,7 +5,7 @@
 - '   <fg=#169b3c>✔</> tests/fixtures/sub1/empty1.php'
 - ' <fg=#3B82F6>❱</> scan complete.'
 - ''
-- ' <fg=#78716C;options=bold>❱</> <fg=#e53e3e>ray</>'
-- ' <fg=#78716C;options=bold>❱</> ./tests/fixtures/fixture1.php:<options=bold>2</>'
+- ' <fg=#78716C;options=bold>❱</> Found: <fg=#e53e3e>ray</>'
+- ' <fg=#78716C;options=bold>❱</> File : ./tests/fixtures/fixture1.php:<options=bold>2</>'
 - ''
 - ' <fg=#ef4444>❗</>Found 1 call in 1 file.'
