--- a/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename__1.yml
+++ b/tests/Commands/__snapshots__/ScanCommandTest__it_executes_the_command_with_a_valid_filename__1.yml
@@ -1,8 +1,8 @@
 - ' <fg=#3B82F6>❱</> scanning for ray calls...'
 - ' <fg=#3B82F6>❱</> scan complete.'
 - ''
-- ' <fg=#78716C;options=bold>❱</> <fg=#e53e3e>ray</>'
-- ' <fg=#78716C;options=bold>❱</> ./tests/fixtures/fixture1.php:<options=bold>2</>'
+- ' <fg=#78716C;options=bold>❱</> Found: <fg=#e53e3e>ray</>'
+- ' <fg=#78716C;options=bold>❱</> File : ./tests/fixtures/fixture1.php:<options=bold>2</>'
 - ''
 - |4
            1▕  <?php
