--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "php": "^8.0",
         "permafrost-dev/code-snippets": "^1.2.0",
         "permafrost-dev/php-code-search": "^1.10.5",
-        "symfony/console": "^5.3",
-        "symfony/finder": "^5.3",
-        "symfony/yaml": "^5.3"
+        "symfony/console": "^5.3|^6.0",
+        "symfony/finder": "^5.3|^6.0",
+        "symfony/yaml": "^5.3|^6.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^0.12.92",
