--- a/composer.json
+++ b/composer.json
@@ -36,9 +36,10 @@
         "symfony/yaml": "^5.3|^6.0|^7.0"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.12.92",
-        "phpunit/phpunit": "^9.5",
-        "spatie/phpunit-snapshot-assertions": "^4.2"
+        "phpstan/phpstan": "^1.10.56",
+        "phpunit/phpunit": "^10.0.0",
+        "rector/rector": "^1.0.0",
+        "spatie/phpunit-snapshot-assertions": "^5.1.4"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
