--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "spatie/x-ray",
-    "description": "Quickly scan source code for calls to Ray",
+    "description": "Quickly find or remove calls to spatie/ray",
     "license": "MIT",
     "keywords": [
         "spatie",
@@ -28,12 +28,12 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "permafrost-dev/code-snippets": "^1.2.0",
         "permafrost-dev/php-code-search": "^1.10.5",
-        "symfony/console": "^5.3|^6.0|^7.0",
-        "symfony/finder": "^5.3|^6.0|^7.0",
-        "symfony/yaml": "^5.3|^6.0|^7.0"
+        "symfony/console": "^6.0|^7.0",
+        "symfony/finder": "^6.0|^7.0",
+        "symfony/yaml": "^6.0|^7.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.10.56",
