--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,8 @@
 blank_issues_enabled: true
 contact_links:
-    - name: Ask a question
-      url: https://github.com/spatie/x-ray/discussions/new?category=q-a
-      about: Ask the community for help
-    - name: Request a feature
+    - name: Feature Request
       url: https://github.com/spatie/x-ray/discussions/new?category=ideas
       about: Share ideas for new features
-    - name: Report a bug
-      url: https://github.com/spatie/x-ray/issues/new
-      about: Report a reproducable bug
+    - name: Ask a Question
+      url: https://github.com/spatie/x-ray/discussions/new?category=q-a
+      about: Ask the community for help
