--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,9 @@
         "php": "^8.0",
         "permafrost-dev/code-snippets": "^1.2.0",
         "permafrost-dev/php-code-search": "^1.10.5",
-        "symfony/console": "^5.3|^6.0|^7.0",
-        "symfony/finder": "^5.3|^6.0|^7.0",
-        "symfony/yaml": "^5.3|^6.0|^7.0"
+        "symfony/console": "^5.3|^6.0|^7.0|^8.0",
+        "symfony/finder": "^5.3|^6.0|^7.0|^8.0",
+        "symfony/yaml": "^5.3|^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^2.0.0",
